--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body{
 
 }
 
+.HeadingPadding{
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
 /* ----------Navigation Bar Classes---------- */
 
 .container-fluid{
@@ -44,6 +48,7 @@ body{
   color:#000000;
 }
 
+
 .accordion-button{
   background-color: #276678;
 }
@@ -63,7 +68,70 @@ body{
   background-color: #1687A7;
 }
 
+/* ----------Personal elements---------- */
+
+.Jason{
+  border-radius: 50%;
+  width: 80%;
+  height: 70%;
+  margin-top:10%;
+}
+
+.MapMarker{
+  margin-bottom: 5%;
+}
+.row{
+  margin:1% 5%;                /*-----Controls Left and right page margins----*/
+}
+.Left{
+  margin-left: 15%;
+  float: left;
+  padding:0 0;
+}
+.Right{
+  margin-right: 15%;
+  float: right;
+  padding:0 0;
+}
+.Emojis{
+  font-size: 13rem;
+}
+.AboutText{
+  font-size:1rem;
+  text-align: justify;
+}
+
+
+
+@Media (max-width:1600px){
+
+  .Jason{
+  border-radius: 50%;
+  width: 100%;
+  height: 65%;
+  margin-top:20%;
+}
+
+
+
+}
+
 @Media (max-width:992px){
+
+  .Jason{
+    border-radius: 50%;
+    width: 50%;
+    height: 65%;
+  }
+
+  .Left{
+    text-align: center;
+    padding-left: 15%;
+  }
+  .Right{
+    text-align: center;
+    padding-right: 25%;
+  }
 
   .navbar-brand{
     font-family: 'Ubuntu', sans-serif;
@@ -93,4 +161,199 @@ body{
     padding-bottom: 5%;
   }
 
+}
+
+/*Timeline code*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
+.timeline {
+  position: relative;
+  width: 100%;
+
+  margin: 0 auto;
+  padding: 15px 0;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  background: #006E51;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+}
+
+.container {
+  padding: 15px 30px;
+  position: relative;
+  background: inherit;
+  width: 50%;
+}
+
+.container.left {
+  left: -25%;
+}
+
+.container.right {
+  left: 25%;
+}
+
+.container::after {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: calc(50% - 8px);
+  right: -8px;
+  background: #ffffff;
+  border: 2px solid #006E51;
+  border-radius: 16px;
+  z-index: 1;
+}
+
+.container.right::after {
+  left: -8px;
+}
+
+.container::before {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  top: calc(50% - 1px);
+  right: 8px;
+  background: #006E51;
+  z-index: 1;
+}
+
+.container.right::before {
+  left: 8px;
+}
+
+.container .date {
+  position: absolute;
+  display: inline-block;
+  top: calc(50% - 8px);
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: #006E51;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  z-index: 1;
+}
+
+.container.left .date {
+  right: -110px;
+}
+
+.container.right .date {
+  left: -110px;
+}
+
+.container .icon {
+  position: absolute;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  padding: 9px 0;
+  top: calc(50% - 20px);
+  background: White;
+  border: 2px solid #006E51;
+  border-radius: 40px;
+  text-align: center;
+  font-size: 18px;
+  color: #006E51;
+  z-index: 1;
+}
+
+.container.left .icon {
+  right: 56px;
+}
+
+.container.right .icon {
+  left: 56px;
+}
+
+.container .content {
+  padding: 30px 90px 30px 30px;
+  background: lightgrey;
+  position: relative;
+  border-radius: 0 500px 500px 0;
+}
+
+.container.right .content {
+  padding: 30px 30px 30px 90px;
+  border-radius: 500px 0 0 500px;
+}
+
+.container .content h2 {
+  margin: 0 0 10px 0;
+  font-size: 18px;
+  font-weight: normal;
+  color: #006E51;
+}
+
+.container .content p {
+  margin: 0;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000000;
+}
+
+@media (max-width: 767.98px) {
+  .timeline::after {
+    left: 20%;
+  }
+
+  .container {
+    width: 100%;
+    padding-left: 120px;
+    /*--padding-right: 60px;--*/
+  }
+
+  .container.right {
+    left: -20%;
+  }
+  .container.left {
+    left: -20%;
+  }
+
+  .container.left::after,
+  .container.right::after {
+    left: 38%;
+  }
+
+  .container.left::before,
+  .container.right::before {
+    left: 40%;
+    border-color: transparent #006E51 transparent transparent;
+  }
+
+  .container.left .date,
+  .container.right .date {
+    right: auto;
+    left: 17%;
+  }
+
+  .container.left .icon,
+  .container.right .icon {
+    right: auto;
+    left: 50%;
+  }
+
+  .container.left .content,
+  .container.right .content {
+    left: 25%;
+    padding: 30px 30px 30px 90px;
+    border-radius: 500px 0 0 500px;
+  }
 }
