--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body{
   border-radius: 50%;
   width: 80%;
   height: 70%;
-  margin-top:10%;
+  margin-top:12%;
 }
 
 .MapMarker{
@@ -153,6 +153,10 @@ body{
   font-size: 1.1rem;
 }
 
+.RemoveMargins{
+  margin: 0;
+}
+
 .Centrediv{
   text-align: center;
   margin: auto;
@@ -175,8 +179,9 @@ body{
 
   .Jason{
     border-radius: 50%;
-    width: 30%;
-    height: 55%;
+    width: 40%;
+    height: 65%;
+    margin: 5%;
   }
 
   .Left{
@@ -214,6 +219,12 @@ body{
     background-image: url("Intro Background Paper9.png");
     background-size: 100% 100.2%;
     padding-bottom: 5%;
+  }
+
+  .CarouselImages{
+    width:30%;
+    height: 20%;
+    padding-bottom: 20%
   }
 
 }
