--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,12 @@ body{
   margin: auto;
 }
 
+.attributeUrlStyle{
+  text-decoration: none;
+  font-size: 0.8rem;
+  color: grey;
+}
+
 @Media (max-width:1600px){
 
   .Jason{
