Background image change

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 }
 
 #IntroSection{
-  background-image: url("Intro Background Paper9.png");
+  background-image: url("Background new.jpg");
   background-size: 100% 100.2%;
   padding-bottom: 5%;
 }
@@ -250,7 +250,7 @@ body{
   }
 
   #IntroSection{
-    background-image: url("Intro Background Paper9.png");
+
     background-size: 100% 100.2%;
     padding-bottom: 5%;
   }
