--- a/styles.css
+++ b/styles.css
@@ -120,9 +120,9 @@ body{
 }
 
 .CarouselImages{
-  width:30%;
+  width:40%;
   height: 20%;
-  padding-bottom: 10%
+  padding-bottom: 15%
 }
 
 .bold{
@@ -173,6 +173,9 @@ body{
 .Centrediv{
   text-align: center;
   margin: auto;
+}
+.CarouselColour{
+  background-color: lightgrey;
 }
 
 .attributeUrlStyle{
@@ -257,9 +260,9 @@ body{
   }
 
   .CarouselImages{
-    width:30%;
-    height: 20%;
-    padding-bottom: 20%
+    width:60%;
+    height: 40%;
+    padding-bottom: 30%
   }
 
 }
