--- a/styles.css
+++ b/styles.css
@@ -174,13 +174,15 @@ body{
   text-align: center;
   margin: auto;
 }
-.CarouselColour{
-  background-color: lightgrey;
+
+.leftalign{
+  text-align:center;
 }
+
 
 .attributeUrlStyle{
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: grey;
 }
 
