--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
   padding-bottom: 5%;
 }
 #IntroImage{
-  width: 50%
+  width: 44%
 
 }
 
@@ -21,15 +21,15 @@ body{
 /* ----------Navigation Bar Classes---------- */
 
 .container-fluid{
-  padding:1% 4% 3% 12%;
+  padding:1% 4% 1% 4%;
 
 }
 .navbar{
-  padding:0 0 2rem 0;
+  padding:1rem 0 2rem 0;
 }
 .navbar-brand{
   font-family: 'Ubuntu', sans-serif;
-  font-size:2.2rem;
+  font-size:2.6rem;
   font-weight:bold;
 }
 .navbar-brand:hover{
@@ -72,20 +72,22 @@ body{
 
 .Jason{
   border-radius: 50%;
-  width: 80%;
-  height: 70%;
-  margin-top:12%;
+  width: 12%;
+  height: 10%;
+  margin-top:2%;
 }
 .goal{
-  width: 80%;
-  height: 80%;
-  margin-top:12%;
+  width: 20%;
+  height: 20%;
+  margin-top:2%;
+  margin-bottom: 1%;
 }
 
 .hobby{
-  width: 70%;
-  height: 80%;
-  margin-top:1%;
+  width: 20%;
+  height: 25%;
+  margin-top:2%;
+  margin-bottom: 1%;
 }
 
 .MapMarker{
@@ -93,6 +95,17 @@ body{
 }
 .row{
   margin:1% 5%;                /*-----Controls Left and right page margins----*/
+}
+.thin_row{
+  margin:1% 10%;
+}
+.Border{
+  border-style:inset;
+  border-width: thick;
+  border-radius: 100px;
+  padding: 3%;
+  border-color: #E8F6EF;
+
 }
 .Left{
   margin-left: 15%;
@@ -190,10 +203,14 @@ body{
 
   .Jason{
   border-radius: 50%;
-  width: 100%;
-  height: 65%;
-  margin-top:20%;
+  width: 25%;
+  height: 20%;
+  margin:auto;
+  margin-bottom: 1%;
+
 }
+
+
 
 
 
@@ -205,22 +222,38 @@ body{
   }
   .Jason{
     border-radius: 50%;
-    width: 30%;
-    height: 55%;
+    width: 50%;
+    height: 65%;
     margin-bottom: 4%;
     margin-top:2%;
   }
+  .thin_row{
+    margin:1% 5%;
+  }
+
+  .Border{
+  border-style:inset;
+  border-width: thick;
+  border-radius: 100px;
+  padding: 6%;
+  border-color: #E8F6EF;
+}
 
   .goal{
-    width: 45%;
-    height: 45%;
-    margin-top:1%;
-  }
+  width: 40%;
+  height: 40%;
+  margin-top:2%;
+  margin-bottom: 1%;
+}
+
   .hobby{
-    width: 40%;
-    height: 40%;
-    margin-top:1%;
-  }
+  width: 40%;
+  height: 45%;
+  margin-top:2%;
+  margin-bottom: 1%;
+}
+
+
 
   .Left{
     text-align: center;
@@ -244,9 +277,18 @@ body{
 
   }
   .nav-link{
-        color:#ffffff;
-        font-size: 1rem;
+    color:black;
+    font-size: 1rem;
   }
+
+  .nav-link:hover{
+    color:#ffffff;
+  }
+
+  .navbar-toggler{
+    margin: auto;
+  }
+
   .container-fluid{
     padding:1% 4% 1% 12%;
 
@@ -266,6 +308,7 @@ body{
     height: 40%;
     padding-bottom: 30%
   }
+
 
 }
 
