--- a/styles.css
+++ b/styles.css
@@ -222,15 +222,17 @@ body{
   }
   .Jason{
     border-radius: 50%;
-    width: 50%;
-    height: 65%;
+    width: 40%;
+    height: 55%;
     margin-bottom: 4%;
     margin-top:2%;
   }
   .thin_row{
     margin:1% 5%;
   }
-
+  .row{
+    margin:1% 1%;
+  }
   .Border{
   border-style:inset;
   border-width: thick;
